force-app/main/default/objects/LT_Payment__c/LT_Payment__c.object-meta.xml
<CustomObject>
    <description>Pagamento - LogiTrack Operations 360.</description>
    <label>Pagamento</label>
    <nameField>
        <displayFormat>PAG-{000000}</displayFormat>
        <label>Codigo do Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagamentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>