force-app/main/default/objects/LT_Payment__c/fields/LT_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Amount__c</fullName>
    <description>Valor efetivamente pago nesta transacao.</description>
    <label>Valor Pago</label>
    <required>true</required>
    <type>Currency</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>