force-app/main/default/objects/LT_Payment__c/fields/LT_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>LT_Bank_Account__c</fullName>
    <description>Conta bancaria de onde saiu o recurso.</description>
    <label>Conta de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conta Corrente - Itau</fullName>
            </value>
            <value>
                <fullName>Conta Corrente - Bradesco</fullName>
            </value>
            <value>
                <fullName>Conta Pagamentos - Nubank PJ</fullName>
            </value>
            <value>
                <fullName>Caixa / Fundo Fixo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>