force-app/main/default/objects/LT_Payment__c/fields/LT_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Fee_Amount__c</fullName>
    <description>Tarifa cobrada pelo banco na transacao.</description>
    <label>Tarifa Bancaria</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>