force-app/main/default/objects/LT_Payment__c/fields/LT_Notes__c.field-meta.xml
<CustomField>
    <fullName>LT_Notes__c</fullName>
    <description>Observacoes sobre o pagamento.</description>
    <label>Observacoes</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>