force-app/main/default/objects/LT_Payment__c/fields/LT_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Paid_By__c</fullName>
    <description>Usuario que executou o pagamento.</description>
    <label>Pago Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pagamentos Executados</relationshipLabel>
    <relationshipName>LT_Executed_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>