force-app/main/default/objects/LT_Payment__c/fields/LT_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Date__c</fullName>
    <description>Data em que o pagamento foi efetuado.</description>
    <label>Data do Pagamento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>