force-app/main/default/objects/LT_Payment__c/fields/LT_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Method__c</fullName>
    <description>Meio usado nesta transacao.</description>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIX</fullName>
                <default>true</default>
                <label>PIX</label>
            </value>
            <value>
                <fullName>TED / Transferencia</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Cartao Corporativo</fullName>
            </value>
            <value>
                <fullName>Dinheiro (Caixa)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>