force-app/main/default/objects/LT_Payment__c/fields/LT_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Request__c</fullName>
    <description>Solicitacao que autoriza este pagamento.</description>
    <label>Solicitacao de Pagamento</label>
    <referenceTo>LT_Payment_Request__c</referenceTo>
    <relationshipLabel>Pagamentos</relationshipLabel>
    <relationshipName>LT_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>