force-app/main/default/objects/LT_Payment__c/fields/LT_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>LT_Reconciled__c</fullName>
    <description>Pagamento conferido contra o extrato bancario.</description>
    <label>Conciliado</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>