force-app/main/default/objects/LT_Payment__c/fields/LT_Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Reconciliation_Date__c</fullName>
    <description>Data da conciliacao bancaria.</description>
    <label>Data da Conciliacao</label>
    <type>Date</type>
</CustomField>