force-app/main/default/objects/LT_Payment__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Situacao da transacao de pagamento.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendado</fullName>
                <default>true</default>
                <label>Agendado</label>
            </value>
            <value>
                <fullName>Processando</fullName>
            </value>
            <value>
                <fullName>Confirmado</fullName>
            </value>
            <value>
                <fullName>Falhou</fullName>
            </value>
            <value>
                <fullName>Estornado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>