force-app/main/default/objects/LT_Payment__c/fields/LT_Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>LT_Total_Disbursed__c</fullName>
    <description>Valor pago somado a tarifa bancaria.</description>
    <label>Total Desembolsado</label>
    <formula>BLANKVALUE(LT_Amount__c, 0) + BLANKVALUE(LT_Fee_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>