force-app/main/default/objects/LT_Payment__c/fields/LT_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>LT_Transaction_Id__c</fullName>
    <description>Identificador do comprovante bancario.</description>
    <label>ID da Transacao</label>
    <type>Text</type>
    <length>60</length>
</CustomField>