force-app/main/default/objects/LT_Payment__c/validationRules/LT_PAY_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PAY_Amount_Positive</fullName>
    <active>true</active>
    <description>O valor pago deve ser maior que zero.</description>
    <errorConditionFormula>BLANKVALUE(LT_Amount__c, 0) &lt;= 0</errorConditionFormula>
    <errorDisplayField>LT_Amount__c</errorDisplayField>
    <errorMessage>Informe um valor pago maior que zero.</errorMessage>
</ValidationRule>