force-app/main/default/objects/LT_Payment__c/validationRules/LT_PAY_Confirmed_Requires_Txn.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PAY_Confirmed_Requires_Txn</fullName>
    <active>true</active>
    <description>Pagamento confirmado exige o ID da transacao.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Confirmado"), ISBLANK(LT_Transaction_Id__c))</errorConditionFormula>
    <errorDisplayField>LT_Transaction_Id__c</errorDisplayField>
    <errorMessage>Informe o ID da transacao ao confirmar o pagamento.</errorMessage>
</ValidationRule>