force-app/main/default/objects/LT_Payment__c/validationRules/LT_PAY_Reconciled_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PAY_Reconciled_Requires_Date</fullName>
    <active>true</active>
    <description>Pagamento conciliado exige a data da conciliacao.</description>
    <errorConditionFormula>AND(LT_Reconciled__c, ISBLANK(LT_Reconciliation_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Reconciliation_Date__c</errorDisplayField>
    <errorMessage>Informe a data da conciliacao.</errorMessage>
</ValidationRule>