force-app/main/default/objects/LT_Payment__c/validationRules/LT_PAY_Reversed_Not_Reconciled.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_PAY_Reversed_Not_Reconciled</fullName>
    <active>true</active>
    <description>Pagamento estornado nao pode estar conciliado.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Estornado"), LT_Reconciled__c)</errorConditionFormula>
    <errorDisplayField>LT_Reconciled__c</errorDisplayField>
    <errorMessage>Um pagamento estornado nao pode ficar marcado como conciliado.</errorMessage>
</ValidationRule>