force-app/main/default/objects/LT_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Payment_Request__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Payment_Method__c</columns>
    <columns>LT_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>